# financial_transactions_classification

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
application/code/adapters/: mlflow_adapter.py  storage.py
application/code/core/: configurations.py  dataset_split_service.py  feature_engineering.py  financial_classification_model.py  model_evaluation.py  model_training.py  model_training_service.py
application/data/raw/: test.parquet  train.parquet
application/notebooks/: 01_SplitDataset.ipynb  02_ExploreDataset.ipynb  03.1_TrainBaseModel.ipynb  03.2_TrainModifiedModel.ipynb  03.3_EvaluateModels.ipynb  04_EvaluateModels.ipynb
containers/: Dockerfile.application  Dockerfile.mlflow
tests/integration/: test_mlflow.py
tests/unit/: test_dataset_split_service.py
